<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/cust_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/border">

        <LinearLayout
            android:id="@+id/layer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/list_crn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:hint="@string/hint_crn" />

            <TextView
                android:id="@+id/list_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="end"
                android:hint="@string/hint_date" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:src="@drawable/ic_create_black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layer1">

            <TextView
                android:id="@+id/list_cust_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cust_name"
                android:textSize="24dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layer2"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/list_cust_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_cust_add"
                android:paddingBottom="15dp" />

            <TextView
                android:id="@+id/list_status_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:hint="@string/status_no"
                android:textSize="26dp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>