<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sayli.nchs.ReportCallStatus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#c2c2ff"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/cust_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cust_name"
                android:padding="5dp"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/cust_crn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cust_name"
                android:layout_weight="1"
                android:hint="@string/hint_crn"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp" />

            <TextView
                android:id="@+id/cust_amc_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cust_crn_no"
                android:layout_weight="1"
                android:hint="@string/hint_amc_name"
                android:paddingLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:src="@drawable/ic_phone_iphone_black" />

                <TextView
                    android:id="@+id/cust_mob_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/hint_cust_mob_no"
                    android:padding="16dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:src="@drawable/ic_call_black" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:src="@drawable/ic_location_on_black" />

                <TextView
                    android:id="@+id/cust_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/hint_cust_add"
                    android:padding="16dp" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:src="@drawable/ic_directions_black" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">
            <!-- Call Status category -->
            <LinearLayout
                android:id="@+id/container_call_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:layout_weight="1"
                    android:paddingLeft="16dp"
                    android:text="@string/call_status" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <!-- Call Status drop-down spinner -->
                    <Spinner
                        android:id="@+id/spinner_call_status"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:padding="5dp">
                <!-- Name field -->
                <!--  <EditText
                      android:id="@+id/service_charges"
                      style="@style/EditorFieldStyle"
                      android:layout_width="0dp"
                      android:layout_weight="1"
                      android:hint="@string/hint_service_charges"
                      android:inputType="textCapWords" />-->
                <android.support.design.widget.TextInputLayout
                    style="@style/EditorFieldStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/service_charges"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_service_charges"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <!-- Name field -->
                <android.support.design.widget.TextInputLayout
                    style="@style/EditorFieldStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/tadafa"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_tadafa"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:padding="5dp">
                <!-- Name field -->
                <android.support.design.widget.TextInputLayout
                    style="@style/EditorFieldStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/payment_mode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_pay_mode"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <!-- Name field -->
                <android.support.design.widget.TextInputLayout
                    style="@style/EditorFieldStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/receipt_no"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_receipt_no"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="R E P O R T"
                android:translationX="260dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
