<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sayli.nchs.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/border">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/count_calls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:hint="0"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/count_calls"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/hint_count_calls_label"
                    android:padding="5dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/collectedAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:hint="0"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/collectedAmount"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/hint_count_amount_collected_label"
                    android:padding="5dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/newCallsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:hint="0"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/newCallsCount"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/hint_count_new_calls_label"
                    android:padding="5dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/pendingCallsCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:hint="0"
                    android:padding="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pendingCallsCount"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/hint_count_pending_calls_label"
                    android:padding="5dp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.SearchView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="OPEN"
                android:textAlignment="center"
                android:textColor="#666060" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="COMPLETED"
                android:textAlignment="center"
                android:textColor="#666060" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:text="CANCELED"
                android:textAlignment="center"
                android:textColor="#666060" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/cust_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:background="@drawable/border">

            <LinearLayout
                android:id="@+id/layer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"

                >

                <TextView
                    android:id="@+id/list_crn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:hint="@string/hint_crn" />

                <TextView
                    android:id="@+id/list_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:gravity="end"
                    android:hint="@string/hint_date" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_create_black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layer1">

                <TextView
                    android:id="@+id/list_cust_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cust_name"
                    android:textSize="24dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layer2"
                android:layout_margin="5dp">

                <TextView
                    android:id="@+id/list_cust_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/hint_cust_add"
                    android:paddingBottom="15dp" />

                <TextView
                    android:id="@+id/list_status_no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:hint="@string/status_no"
                    android:textSize="26dp" />
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
